# Texture-Generator

./: Cargo.toml  auto.d.ts  auto.js  auto_bg.wasm.d.ts  build_and_host.ps1  index.html  readme.md
src/: char_texture.rs  main.rs  noise.rs  paint.rs  random.rs  random_rules.rs  rule.rs  save_and_load.rs  sprite_gen.rs  texture_display.rs  texture_noise.rs  ui.rs
