[package]
name = "auto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "0.8"

regex = "1.5"
lazy_static = "1.4"
noise = "0.7"
bevy_egui = "0.13"

# export
image = "0.24"
base64 = "0.13"
serde_json = "1.0"